--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alejo-portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@supabase/supabase-js": "^2.46.1",
+    "dotenv": "^16.4.7",
     "iconoir-react": "^7.7.0",
+    "pocketbase": "^0.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
